--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Enric Florit</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<script src="js/boostrap.min.js"></script>
 </head>
 <body>
 	<h1>hey there!</h1>
