--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Enric Florit</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script src="js/boostrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 	<h1>hey there!</h1>
