--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Enric Florit</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 	<h1>hey there!</h1>
+	<p>This page will remain this way until I find a nice, minimalist template (Jekyll or otherwise).</p>
 </body>
 </html>
