--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html>
 <head>
 	<title>Enric Florit</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<h1>hey there!</h1>
-	<p>This page will remain this way until I find a nice, minimalist template (Jekyll or otherwise).</p>
+	<section id="main">
+		<h1>Hello.</h1>
+		<p>This is Enric Florit's personal homepage.</p>
+		<p><i>(what do you think about that 90s opening sentence?)</i></p>
+		<p>This was going to be a jekyll-powered, nicely designed website. But someone convinced me to handcraft it slowly on my own. Thus, in the following months this will grow back to what it used to be (quite a big blog about stuff I devote my time to), except it will be better and more up-to-date.</p>
+		<p>Until then, I will give you a short list of places to go from here:</p>
+		<ul>
+			<li>The biggest and most serious project I've taken part in: <a href="https://skibeta.com">Skibeta</a></li>
+			<li>My when-you-got-some-time, giving-back-to-the-community, have-fun-with-some-friends project: <a href="https://hackinglliure.org">Hacking Lliure</a></li>
+			<li><a href="https://github.com/3nr1c">My github account</a></li>
+			<li>My twitter account: <a href="https://twitter.com/enricflorit">@enricflorit</a> (don't expect many witty words, I retweet things most of the time)</li>
+		</ul>
+		<p>I think this will be about it.</p>
+		<br/>
+		<div class="center">
+			<p>Oh, let me include a .png with my favourite avatar!</p>
+			<img src="fantasma.png" class="profile-pic"/>
+		</div>
+	</section>
 </body>
 </html>
