--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Enric Florit</title>
 	<link rel="stylesheet" href="main.css">
+	<link rel="icon" type="image/png" href="fantasma.png">
 </head>
 <body>
 	<section id="main">
