Add slides for p-adic attacks on elliptic curves

--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
 			<li><a href="https://github.com/3nr1c">My github account</a></li>
 			<li>My twitter account: <a href="https://twitter.com/enricflorit">@enricflorit</a> (don't expect many witty words, I retweet things most of the time)</li>
 		</ul>
-		<p>I think this will be about it.</p>
+		<p>I think this will be about it for the introduction.</p>
 		<br/>
 		<div class="center">
 			<p>Oh, let me include a .png with my favourite avatar!</p>
 			<img src="fantasma.png" class="profile-pic"/>
 		</div>
+
+		<hr/>
+
+		<h2>Materials</h2>
+
+		<ul>
+			<li><b>p-adic attacks on elliptic curves</b>: the people at <a href="http://overdriveconference.com">Overdrive</a> asked me to do some talk on cryptograpy, and so I started studying about elliptic curve theory and ECC. During the actual talk I didn't have much time to explain the attack, but it is partially detailed in the slides. The main reference for study was Lawrence Washington's "Elliptic Curves: Number theory and Cryptography". <a href="p_adic_attacks_on_elliptic_curves.pdf">You can find the slides here (pdf).</a></li>
+		</ul>
 	</section>
 </body>
 </html>
