--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<h2>Materials</h2>
 
 		<ul>
-			<li><b>p-adic attacks on elliptic curves</b>: the people at <a href="http://overdriveconference.com">Overdrive</a> asked me to do some talk on cryptograpy, and so I started studying about elliptic curve theory and ECC. During the actual talk I didn't have much time to explain the attack, but it is partially detailed in the slides. The main reference for study was Lawrence Washington's "Elliptic Curves: Number theory and Cryptography". <a href="p_adic_attacks_on_elliptic_curves.pdf">You can find the slides here (pdf).</a></li>
+			<li><b>p-adic attacks on elliptic curves</b>: the people at the <a href="http://overdriveconference.com">Overdrive Hacking Conference</a> asked me to do some talk on cryptograpy, and so I started studying about elliptic curve theory and ECC. During the actual talk I didn't have much time to explain the attack, but it is partially detailed in the slides. The main reference for study was Lawrence Washington's "Elliptic Curves: Number theory and Cryptography". <a href="/assets/p_adic_attacks_on_elliptic_curves.pdf">You can find the slides here (pdf).</a></li>
 		</ul>
 	</section>
 </body>
