--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<h1>Hello.</h1>
 		<p>This is Enric Florit's personal homepage.</p>
 		<p><i>(what do you think about that 90s opening sentence?)</i></p>
-		<p>This was going to be a jekyll-powered, nicely designed website. But someone convinced me to handcraft it slowly on my own. Thus, in the following months this will grow back to what it used to be (quite a big blog about stuff I devote my time to), except it will be better and more up-to-date.</p>
-		<p>Until then, I will give you a short list of places to go from here:</p>
+		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
+		<p>A short list of places to go from here:</p>
 		<ul>
 			<li>The biggest and most serious project I've taken part in: <a href="https://skibeta.com">Skibeta</a></li>
 			<li>My when-you-got-some-time, giving-back-to-the-community, have-fun-with-some-friends project: <a href="https://hackinglliure.org">Hacking Lliure</a></li>
@@ -30,7 +30,9 @@
 		<h2>Materials</h2>
 
 		<ul>
-			<li><b>p-adic attacks on elliptic curves</b>: the people at the <a href="http://overdriveconference.com">Overdrive Hacking Conference</a> asked me to do some talk on cryptograpy, and so I started studying about elliptic curve theory and ECC. During the actual talk I didn't have much time to explain the attack, but it is partially detailed in the slides. The main reference for study was Lawrence Washington's "Elliptic Curves: Number theory and Cryptography". <a href="/assets/p_adic_attacks_on_elliptic_curves.pdf">You can find the slides here (pdf).</a></li>
+			<li><i>July 2019.</i> <b>Elliptic curves, Pairings, and the ECDLP</b>. I had the opportunity to attend to a Summer School named "Cryptography meets Graph Theory" (<a href="https://ifm.mathematik.uni-wuerzburg.de/summerschool2019/">more info here</a>) where we were encouraged to present a poster. Mine was about the MOV attack, an algorithm that tries to simplify Discrete Logarithms over Elliptic Curves. You can find the poster <a href="/assets/ECDLP/ECDLP_poster.pdf">here</a>. I also wrote some <a href="/assets/ECDLP/ECDLP_notes.pdf">notes for myself</a>, although they are <i>very</i> incomplete. The material is fairly technical, but accessible once one has some basic knowledge on groups, arithmetic and elliptic curves.</li>
+			
+			<li><i>April 2019.</i> <b>p-adic attacks on elliptic curves</b>: the people at the <a href="http://overdriveconference.com">Overdrive Hacking Conference</a> asked me to do some talk on cryptograpy, and so I started studying about elliptic curve theory and ECC. During the actual talk I didn't have much time to explain the attack, but it is partially detailed in the slides. The main reference for study was Lawrence Washington's "Elliptic Curves: Number theory and Cryptography". <a href="/assets/p_adic_attacks_on_elliptic_curves.pdf">You can find the slides here (pdf).</a></li>
 		</ul>
 	</section>
 </body>
