--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		<h2>Materials</h2>
 
 		<ul>
-			<li><i>July 2019.</i> <b>Elliptic curves, Pairings, and the ECDLP</b>. I had the opportunity to attend to a Summer School named "Cryptography meets Graph Theory" (<a href="https://ifm.mathematik.uni-wuerzburg.de/summerschool2019/">more info here</a>) where we were encouraged to present a poster. Mine was about the MOV attack, an algorithm that tries to simplify Discrete Logarithms over Elliptic Curves. You can find the poster <a href="/assets/ECDLP/ECDLP_poster.pdf">here</a>. I also wrote some <a href="/assets/ECDLP/ECDLP_notes.pdf">notes for myself</a>, although they are <i>very</i> incomplete. The material is fairly technical, but accessible once one has some basic knowledge on groups, arithmetic and elliptic curves.</li>
-			
+			<li><i>July 2019.</i> <b>Elliptic curves, Pairings, and the ECDLP</b>. I had the opportunity to attend to a Summer School named "Cryptography meets Graph Theory" (<a href="https://ifm.mathematik.uni-wuerzburg.de/summerschool2019/">more info here</a>) where we were encouraged to present a poster. Mine was about the MOV attack, an algorithm that tries to simplify Discrete Logarithms over Elliptic Curves. You can find the poster <a href="/assets/ECDLP/ECDLP_poster.pdf">here</a>. I also wrote some <a href="/assets/ECDLP/ECDLP_notes.pdf">study notes</a>, although they are <i>very</i> incomplete. The material is fairly technical, but accessible once one has some basic knowledge on groups, arithmetic and elliptic curves.</li>
+
 			<li><i>April 2019.</i> <b>p-adic attacks on elliptic curves</b>: the people at the <a href="http://overdriveconference.com">Overdrive Hacking Conference</a> asked me to do some talk on cryptograpy, and so I started studying about elliptic curve theory and ECC. During the actual talk I didn't have much time to explain the attack, but it is partially detailed in the slides. The main reference for study was Lawrence Washington's "Elliptic Curves: Number theory and Cryptography". <a href="/assets/p_adic_attacks_on_elliptic_curves.pdf">You can find the slides here (pdf).</a></li>
 		</ul>
 	</section>
