Left-align first ul

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<p><i>(what do you think about that 90s opening sentence?)</i></p>
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
 		<p>A short list of places to go from here:</p>
-		<ul>
+		<ul class="left">
 			<li>The biggest and most serious project I've taken part in: <a href="https://skibeta.com">Skibeta</a></li>
 			<li>My when-you-got-some-time, giving-back-to-the-community, have-fun-with-some-friends project: <a href="https://hackinglliure.org">Hacking Lliure</a></li>
 			<li><a href="https://github.com/3nr1c">My github account</a></li>
