--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<section id="main">
 		<h1>Hello.</h1>
 		<p>This is Enric Florit's personal homepage.</p>
-		<p><i>(what do you think about that 90s opening sentence?)</i></p>
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
 		<p>A short list of places to go from here:</p>
 		<ul class="left">
@@ -30,6 +29,9 @@
 		<h2>Materials</h2>
 
 		<ul id="materials">
+			<li><i>January 2020.</i> <b>Isogeny Explorer: Understanding isogeny-based cryptography through visualization.</b> Visualizations of supersingular isogeny graphs.
+			<p>The topic of my Bachelor's thesis was isogeny-based cryptography, and, more specifically, I studied the SIDH protocol and its basic cryptanalysis. To better understand isogeny graphs and to be able to explain them, I made a way to save isogeny graphs in JSON files for visualization with D3.js. <a href="https://isogenies.enricflorit.com">Access the final product here</a>.</p></li>
+
 			<li><i>November 2019.</i> <b>Postquantum Cryptography: what, why, and how?</b> Talk given at the <a href="http://www.ub.edu/simba/en/index.html">SIMBa Seminar</a>.
 			<p><i>Abstract</i>: The key agreement scheme proposed by Diffie and Hellman in 1976 relies on the problem of finding discrete logarithms. One can choose appropriate groups where the best algorithms for solving this problem are too slow, such as certain elliptic curves over finite fields. There are already proposed quantum algorithms that break discrete logarithms in polynomial time. For this reason multiple "postquantum" cryptography primitives have appeared in the last years, while trying to find harder computational problems. One of the proposed protocols using elliptic curves is SIDH/SIKE, candidate to the NIST Post-Quantum Cryptography Competition. <a href="assets/Postquantum_Cryptography__what__why__and_how.pdf">You can find the slides here (pdf)</a> and a <a href="https://youtu.be/VA30KI5cG8c">recording of the talk here</a>.</p></li>
 
