--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<h2>Materials</h2>
 
 		<ul id="materials">
-			<li><i>February 2020.</i> <b><a href="http://stnb.cat/">STNB2020</a>: Isogeny-based cryptography</b>.
+			<li><i>February 2020.</i> <b>Isogeny-based cryptography</b>. Talk given at the <a href="http://stnb.cat/en/seminaris/20192/">STNB2020</a> (Barcelona Number Theory Seminar).
 			<p><i>Abstract</i>: The SIDH protocol was presented in 2011 by Jao and De Feo, giving an alternative to the key exchange of Diffie-Hellman which is resistent to quantum cryptanalysis. Its security is based in the difficulty of finding isogenies between two supersingular elliptic curves. The main concept used is quotienting a curve by a finite subgroup, so that private keys are cyclic subgroups of a certain initial curve, and public keys are the respective quotient curves. These are computed with the Vélu formulas, although the computation of high-degree isogenies must be optimized to make the protocol effective. After explaining the protocol and justifying the choice of parameters, we will see two attacks with which we can try to break keys. <a href="assets/STNB2020-EnricFlorit-handout.pdf">You can find the slides here (pdf)</a>.</p>
 
 			<li><i>January 2020.</i> <b>Isogeny Explorer: Understanding isogeny-based cryptography through visualization.</b> Visualizations of supersingular isogeny graphs.
