Link to ants rump session

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 		<h2>Materials</h2>
 
 		<ul id="materials">
+			<li><i>July 2020.</i> <b>Random walks in genus 2 isogeny graphs</b>, with Ben Smith. ANTS XIV Rump Session (<a href="https://math.mit.edu/~drew/ANTSXIV/RumpFlorit.pdf">slides</a>).</li>
+
 			<li><i>June 2020.</i> <b>Superspecial isogeny graphs in genus 2</b>. Talk given at the <a href="http://www.ub.edu/simba/en/index.html">SIMBa Seminar</a>.
 			<p><i>Abstract</i>: Supersingular isogeny graphs allow us to formulate supposedly post-quantum protocols, based on the fact that we don't have efficient algorithms to find isogenies between curves. These graphs are expanders and Ramanujan; in particular, the stationary distribution of the random walk is (essentially) uniform. After defining these notions, we will talk about the generalization of these graphs with hyperelliptic genus 2 curves, and we will explain some properties appearing in this case and the differences with elliptic curve graphs. <a href="assets/Superspecial_isogeny_graphs_in_genus_2.pdf">You can find the slides here (pdf)</a>.</p></li>
 
