New visualizations link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<li>The written part (in catalan): <a href="http://hdl.handle.net/2445/164891">http://hdl.handle.net/2445/164891</a> or <a href="assets/TFG/Memoria--Criptografia-basada-en-isogenies--Enric-Florit.pdf">here</a>.</li>
 				<li><a href="assets/TFG/Presentacio--Criptografia-basada-en-isogenies--Enric--Florit.pdf">The presentation slides</a> (also in catalan).</li>
 				<li><a href="https://gitlab.com/efz1005/isogenies">Source code</a> (written and documented in english) for the curstom implementation of SIDH and its attacks in Sage. <i>Warning: do not use in production!</i></li>
-				<li><a href="https://isogenies.enricflorit.com">Isogeny Explorer</a>: Understanding isogeny-based cryptography through visualization. Visualizations of supersingular isogeny graphs. To better understand isogeny graphs and to be able to explain them, I made a way to save isogeny graphs in JSON files for visualization with D3.js.</li>
+				<li><a href="https://isogenies.enricflorit.com/visualizations/index.html">Isogeny Explorer</a>: Understanding isogeny-based cryptography through visualization. Visualizations of supersingular isogeny graphs. To better understand isogeny graphs and to be able to explain them, I made a way to save isogeny graphs in JSON files for visualization with D3.js.</li>
 			</ul>
 			</p>
 			</li>
