--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 	<section id="main">
-		<h1>Hello.</h1>
-		<p>This is Enric Florit's personal homepage.</p>
+		<h1>Enric Florit</h1>
+		<p>I am currently doing my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I expect to finish by summer of 2021.</p>
+
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
 		<p>A short list of places to go from here:</p>
 		<ul class="left">
@@ -19,18 +20,24 @@
 			<li>My <a href="https://github.com/3nr1c">github</a> and <a href="https://gitlab.com/efz1005/">gitlab</a> accounts</li>
 			<li>My twitter account: <a href="https://twitter.com/enricflorit">@enricflorit</a> (don't expect many witty words, I retweet things most of the time)</li>
 		</ul>
-		<p>I think this will be about it for the introduction.</p>
-		<br/>
 		<div class="center">
-			<p>Oh, let me include a .png with my favourite avatar!</p>
 			<img src="fantasma.png" class="profile-pic"/>
 		</div>
 
-		<hr/>
+		<h2>Preprints</h2>
+
+		<ul id="preprints">
+			<li><i>December 2020.</i> <b>An atlas of the Richelot isogeny graph</b>, with Ben Smith. <a href="https://hal.inria.fr/hal-03094296" target="_blank">https://hal.inria.fr/hal-03094296</a>.</li>
+			<li><i>December 2020.</i> <b>Automorphisms and isogeny graphs of abelian varieties, with applications to the superspecial Richelot isogeny graph</b>, with Ben Smith. <a href="https://hal.inria.fr/hal-03094375" target="_blank">https://hal.inria.fr/hal-03094375</a>.</li>
+		</ul>
 
 		<h2>Materials</h2>
 
 		<ul id="materials">
+			<li><i>November 2020.</i> <b>A database of isogeny graphs</b>, with Gerard Finol. 
+
+			<p>We computed genus 1 supersingular isogeny graphs for p up to 30,000 and isogeny degrees 2,3,5,7,11, complementing some of the work done in <a href="https://arxiv.org/abs/1909.07779" target="_blank">Adventures in Supersingularland</a> (Arpin et al., 2019). Some tables with the relevant are available from <a href="https://isogenies.enricflorit.com" target="_blank">isogenies.enricflorit.com</a>, and the full database (including adjacency matrices) is available from Zenodo (<a href="https://doi.org/10.5281/zenodo.4303870" target="_blank">DOI 10.5281/zenodo.4304044</a>). We also presented the main ideas as a <a href="https://isogenies.enricflorit.com/assets/isogeny-database-poster.pdf" target="_blank">poster</a> at the <a href="https://bymat.webs.upv.es/index/" target="_blank">third BYMAT conference</a>.</li>
+
 			<li><i>July 2020.</i> <b>Random walks in genus 2 isogeny graphs</b>, with Ben Smith. ANTS XIV Rump Session (<a href="https://math.mit.edu/~drew/ANTSXIV/RumpFlorit.pdf">slides</a>).</li>
 
 			<li><i>June 2020.</i> <b>Superspecial isogeny graphs in genus 2</b>. Talk given at the <a href="http://www.ub.edu/simba/en/index.html">SIMBa Seminar</a>.
