--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<h2>Preprints</h2>
 
 		<ul id="preprints">
-			<li><i>January 2021.</i> <b>An atlas of the Richelot isogeny graph</b>, with Ben Smith. [<a href="https://arxiv.org/abs/2101.00917" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094296" target="_blank">hal</a>].</li>
-			<li><i>December 2020.</i> <b>Automorphisms and isogeny graphs of abelian varieties, with applications to the superspecial Richelot isogeny graph</b>, with Ben Smith. [<a href="https://arxiv.org/abs/2101.00919" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094375" target="_blank">hal</a>.</li>
+			<li><i>January 2021.</i> <b>An atlas of the Richelot isogeny graph</b>, with Ben Smith. [<a href="https://arxiv.org/abs/2101.00917" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094296" target="_blank">hal</a>]</li>
+			<li><i>December 2020.</i> <b>Automorphisms and isogeny graphs of abelian varieties, with applications to the superspecial Richelot isogeny graph</b>, with Ben Smith. [<a href="https://arxiv.org/abs/2101.00919" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094375" target="_blank">hal</a>]</li>
 		</ul>
 
 		<h2>Materials</h2>
