--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
 	<section id="main">
 		<h1>Enric Florit</h1>
-		<p>I am currently doing my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I expect to finish by summer of 2021.</p>
+		<p>I studied Mathematics and Computer Engineering at the University of Barcelona (2014 - 2020). I am currently doing my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I expect to finish by summer of 2021. For my master's degree I have been awarded a Màster+UB scholarship at IMUB.</p>
 
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
 		<p>A short list of places to go from here:</p>
 		<ul class="left">
 			<li>The <a href="http://www.ub.edu/simba/">SIMBa Seminar</a>: informal mathematics seminar in Barcelona</li>
-			<li>My when-you-got-some-time, giving-back-to-the-community, have-fun-with-some-friends project: <a href="https://hackinglliure.org">Hacking Lliure</a></li>
-			<li>My entrepreneurial project: <a href="https://skibeta.com">Skibeta</a></li>
+			<li>My giving-back-to-the-community, have-fun-with-some-friends project: <a href="https://hackinglliure.org">Hacking Lliure</a></li>
 			<li>My <a href="https://github.com/3nr1c">github</a> and <a href="https://gitlab.com/efz1005/">gitlab</a> accounts</li>
 			<li>My twitter account: <a href="https://twitter.com/enricflorit">@enricflorit</a> (don't expect many witty words, I retweet things most of the time)</li>
+			<li>My entrepreneurial project: <a href="https://skibeta.com">Skibeta</a></li>
 		</ul>
 		<div class="center">
 			<img src="fantasma.png" class="profile-pic"/>
