--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Enric Florit</title>
+	<title>Enric Florit Zacarías</title>
 	<link rel="stylesheet" href="main.css">
 	<link rel="icon" type="image/png" href="fantasma.png">
 </head>
 <body>
 	<section id="main">
-		<h1>Enric Florit</h1>
+		<h1>Enric Florit Zacarías</h1>
 		<p>I studied Mathematics and Computer Engineering at the University of Barcelona (2014 - 2020). I am currently doing my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I expect to finish by summer of 2021. For my master's degree I have been awarded a Màster+UB scholarship at IMUB.</p>
 
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
