--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<section id="main">
 		<h1>Enric Florit Zacarías</h1>
-		<p>I studied Mathematics and Computer Engineering at the University of Barcelona (2014 - 2020). I am currently doing my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I finished in July 2021. During my master's degree I had support from a Màster+UB scholarship at IMUB.</p>
+		<p>I studied Mathematics and Computer Engineering at the University of Barcelona (2014 - 2020). I did my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I finished in July 2021. During my master's degree I had support from a Màster+UB scholarship at IMUB.</p>
 
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
 		<p>A short list of places to go from here:</p>
