--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 		<h2>Materials</h2>
 
 		<ul id="materials">
+			<li><i>October 2021.</i> <b><a href="http://revistes.iec.cat/index.php/reports/article/view/149355">Random walks on supersingular isogeny graphs</a></b> (Reports@SCM).</li>
+
+			<p>Abstract: 
+			We survey several aspects of supersingular elliptic curves and their isogeny graphs. Isogeny graphs have obtained attention for the last fifteen years due to their uses in quantum-resistant cryptographic protocols. Studying them involves looking at elliptic curves, quaternion algebras, and random walks on (almost) regular graphs, among other topics. In particular, we give the tools necessary to state the Ramanujan property, connecting supersingular curves in characteristic p with modular forms of level p. We also explain the hash function of Charles, Lauter and Goren as an example of application.</p>
+
 			<li><i>August 2021.</i> <b>Towards a database of isogeny graphs</b>, with Gerard Finol.
 
 			<p>The extended abstract for our poster in the 2020 BYMAT conference has been published <a href="https://temat.es/monograficos/article/view/vol2-p159">in the conference proceedings</a>.</p></li>
