Update on papers

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<section id="main">
 		<h1>Enric Florit Zacarías</h1>
-		<p>I studied Mathematics and Computer Engineering at the University of Barcelona (2014 - 2020). I did my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I finished in July 2021. During my master's degree I had support from a Màster+UB scholarship at IMUB. I started my PhD at UB in October 2021, funded by an FPU2020 grant from the Spanish Ministry of Universities. I am currently working on abelian varieties of GL4-type and their conjectural connection to Siegel paramodular forms.</p>
+		<p>I studied Mathematics and Computer Engineering at Universitat de Barcelona (2014 - 2020). I did my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I finished in July 2021. During my master's degree I had support from a Màster+UB scholarship at IMUB. I started my PhD at UB in October 2021, funded by an FPU2020 grant from the Spanish Ministry of Universities. I am currently working on abelian varieties of GL4-type and their conjectural connection to Siegel paramodular forms.</p>
 
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
 		<p>A short list of places to go from here:</p>
@@ -22,11 +22,12 @@
 			<img src="fantasma.png" class="profile-pic"/>
 		</div>
 
-		<h2>Preprints</h2>
+		<h2>Publications</h2>
 
-		<ul id="preprints">
-			<li><i>January 2021.</i> <b>An atlas of the Richelot isogeny graph</b>, with Ben Smith. [<a href="https://arxiv.org/abs/2101.00917" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094296" target="_blank">hal</a>]</li>
-			<li><i>December 2020.</i> <b>Automorphisms and isogeny graphs of abelian varieties, with applications to the superspecial Richelot isogeny graph</b>, with Ben Smith. [<a href="https://arxiv.org/abs/2101.00919" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094375" target="_blank">hal</a>]</li>
+		<ul id="publications">
+			<li><i>March 2021.</i> <b>Some small simple groups not previously known to be Galois over Q</b>, with Luis Dieulefait and Núria Vila. Preprint.</li>
+			<li><i>January 2021.</i> <b>An atlas of the Richelot isogeny graph</b>, with Ben Smith. To appear in the RIMS Kôkyûro Bessatsu volume on supersingular curves and abelian varieties. [<a href="https://arxiv.org/abs/2101.00917" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094296" target="_blank">hal</a>]</li>
+			<li><i>December 2020.</i> <b>Automorphisms and isogeny graphs of abelian varieties, with applications to the superspecial Richelot isogeny graph</b>, with Ben Smith. To appear in the AGC2T 2021 proceedings. [<a href="https://arxiv.org/abs/2101.00919" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094375" target="_blank">hal</a>]</li>
 		</ul>
 
 		<h2>Materials</h2>
