--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<br>
 			In this talk, I will explain the objects in the paramodularity conjecture: my goal is to put emphasis in the classification of abelian varieties of GL4-type, and in particular the ones that have similar representations to those of abelian surfaces. I will also present the examples we currently have at our disposal. Finally I will explain the difficulty in working with fake surfaces.
 			<br>
-			<a href="assets/SIMBA_GL4.pdf">You can find the slides here (pdf)</a> and a <a href="https://www.youtube.com/watch?v=MclvL0_Dwug">recording of the talk here</a>.</p></li>
+			<a href="assets/Simba_GL4.pdf">You can find the slides here (pdf)</a> and a <a href="https://www.youtube.com/watch?v=MclvL0_Dwug">recording of the talk here</a>.</p></li>
 
 			<li><i>October 2021.</i> <b><a href="http://revistes.iec.cat/index.php/reports/article/view/149355">Random walks on supersingular isogeny graphs</a></b> (Reports@SCM).</li>
 
