--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <body>
 	<section id="main">
 		<h1>Enric Florit Zacarías</h1>
-		<p>I studied Mathematics and Computer Engineering at Universitat de Barcelona (2014 - 2020). I did my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I finished in July 2021. During my master's degree I had support from a Màster+UB scholarship at IMUB. I started my PhD at UB in October 2021, funded by an FPU2020 grant from the Spanish Ministry of Universities. I am currently working on abelian varieties of GL4-type and their conjectural connection to Siegel paramodular forms.</p>
+		<p>I studied Mathematics and Computer Engineering at Universitat de Barcelona (2014 - 2020). I did my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I finished in July 2021. During my master's degree I had support from a Màster+UB scholarship at IMUB. I started my PhD at UB in October 2021, funded by an FPU2020 grant from the Spanish Ministry of Universities.</p>
+		
+		<p>I am currently working on abelian varieties of GL4-type and their conjectural connection to Siegel paramodular forms.</p>
 
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
+		<p>My email address is: enricflorit at ub dot edu.</p>
 		<p>A short list of places to go from here:</p>
 		<ul class="left">
 			<li>The <a href="http://www.ub.edu/simba/">SIMBa Seminar</a>: informal mathematics seminar in Barcelona</li>
