--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 		<h2>Materials</h2>
 
 		<ul id="materials">
-			<li><i>May 2022.</i></li> <b>Let's twist again: the problem with fake abelian surfaces.</b> Talk given at the <a href="http://www.ub.edu/simba/en/index.html">SIMBa Seminar</a>.
+			<li><i>May 2022.</i> <b>Let's twist again: the problem with fake abelian surfaces.</b> Talk given at the <a href="http://www.ub.edu/simba/en/index.html">SIMBa Seminar</a>.</li>
 			<p><i>Abstract</i>: The paramodularity conjecture of Brumer and Kramer proposes a connection between abelian surfaces and Siegel paramodular forms. In this correspondence there are some restrictions, for example, we ask that all the eigenvalues of a paramodular form are in Q. In theory, these forms could also correspond to fake surfaces, which are abelian fourfolds with quaternionic multiplication. This motivates the study of abelian varieties whose l-adic representations have dimension 4, which is the case of abelian surfaces. 	 	
 			<br>
 			In this talk, I will explain the objects in the paramodularity conjecture: my goal is to put emphasis in the classification of abelian varieties of GL4-type, and in particular the ones that have similar representations to those of abelian surfaces. I will also present the examples we currently have at our disposal. Finally I will explain the difficulty in working with fake surfaces.
 			<br>
-			<a href="assets/Simba_GL4.pdf">You can find the slides here (pdf)</a> and a <a href="https://www.youtube.com/watch?v=MclvL0_Dwug">recording of the talk here</a>.</p></li>
+			<a href="assets/Simba_GL4.pdf">You can find the slides here (pdf)</a> and a <a href="https://www.youtube.com/watch?v=MclvL0_Dwug">recording of the talk here</a>.</p>
 
 			<li><i>October 2021.</i> <b><a href="http://revistes.iec.cat/index.php/reports/article/view/149355">Random walks on supersingular isogeny graphs</a></b> (Reports@SCM).</li>
 
