--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<h2>Publications</h2>
 
 		<ul id="publications">
-			<li><i>March 2022.</i> <b>Dieulefait, L.; Florit, E.; Vila, N. Seven Small Simple Groups Not Previously Known to Be Galois Over Q.</b>  Mathematics 2022, 10, 2048. [<a href="https://doi.org/10.3390/math10122048">journal</a>, <a href="/assets/papers/Dieulefait--Florit--Vila.pdf">pdf</a>]</li>
+			<li><i>March 2022.</i> <b>Dieulefait, L.; Florit, E.; Vila, N. Seven Small Simple Groups Not Previously Known to Be Galois Over Q.</b>  Mathematics 2022, 10, 2048. [<a href="https://doi.org/10.3390/math10122048" target="_blank">journal</a>, <a href="/assets/papers/Dieulefait--Florit--Vila.pdf" target="_blank">pdf</a>]</li>
 			<li><i>January 2021.</i> <b>An atlas of the Richelot isogeny graph</b>, with Ben Smith. To appear in the RIMS Kôkyûro Bessatsu volume on supersingular curves and abelian varieties. [<a href="https://arxiv.org/abs/2101.00917" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094296" target="_blank">hal</a>]</li>
 			<li><i>December 2020.</i> <b>Automorphisms and isogeny graphs of abelian varieties, with applications to the superspecial Richelot isogeny graph</b>, with Ben Smith. To appear in the AGC2T 2021 proceedings. [<a href="https://arxiv.org/abs/2101.00919" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094375" target="_blank">hal</a>]</li>
 		</ul>
