--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 		<h2>Materials</h2>
 
 		<ul id="materials">
+			<li><i>June 2022.</i> <b>Abelian varieties of GL(4) type.</b> Talk given at the <a href="https://www.unirioja.es/dptos/dmc/jtn2022/index.html">Novenas Jornadas de Teoría de Números</a>.</li>
+
 			<li><i>May 2022.</i> <b>Let's twist again: the problem with fake abelian surfaces.</b> Talk given at the <a href="http://www.ub.edu/simba/en/index.html">SIMBa Seminar</a>.</li>
 			<p><i>Abstract</i>: The paramodularity conjecture of Brumer and Kramer proposes a connection between abelian surfaces and Siegel paramodular forms. In this correspondence there are some restrictions, for example, we ask that all the eigenvalues of a paramodular form are in Q. In theory, these forms could also correspond to fake surfaces, which are abelian fourfolds with quaternionic multiplication. This motivates the study of abelian varieties whose l-adic representations have dimension 4, which is the case of abelian surfaces. 	 	
 			<br>
