--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<ul id="publications">
 			<li><i>March 2022.</i> <b>Dieulefait, L.; Florit, E.; Vila, N. Seven Small Simple Groups Not Previously Known to Be Galois Over Q.</b>  Mathematics 2022, 10, 2048. [<a href="https://doi.org/10.3390/math10122048" target="_blank">journal</a>, <a href="/assets/papers/Dieulefait--Florit--Vila.pdf" target="_blank">pdf</a>]</li>
 			<li><i>January 2021.</i> <b>An atlas of the Richelot isogeny graph</b>, with Ben Smith. To appear in the RIMS Kôkyûro Bessatsu volume on supersingular curves and abelian varieties. [<a href="https://arxiv.org/abs/2101.00917" target="_blank">arXiv</a>, <a href="https://hal.inria.fr/hal-03094296" target="_blank">hal</a>]</li>
-			<li><i>December 2020.</i> <b>Florit, E.; Smith, B. Automorphisms and Isogeny Graphs of Abelian Varieties, with Applications to the Superspecial Richelot Isogeny Graph.</b> In Arithmetic, Geometry, Cryptography, and Coding Theory 2021, 779:103-32. Contemp. Math. Amer. Math. Soc., [Providence], RI, 2022. [<a href="https://doi.org/10.1090/conm/779/15672" target="_blank">proceedings</a>, <a href="https://arxiv.org/abs/2101.00919" target="_blank">arXiv</a>]</li>
+			<li><i>December 2020.</i> <b>Florit, E.; Smith, B. Automorphisms and Isogeny Graphs of Abelian Varieties, with Applications to the Superspecial Richelot Isogeny Graph.</b> In Arithmetic, Geometry, Cryptography, and Coding Theory 2021, 779:103-32. Contemp. Math. Amer. Math. Soc., 2022. [<a href="https://doi.org/10.1090/conm/779/15672" target="_blank">proceedings</a>, <a href="https://arxiv.org/abs/2101.00919" target="_blank">arXiv</a>]</li>
 
 		</ul>
 
