--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 		<h2>Materials</h2>
 
 		<ul id="materials">
-			<li><i>September 2022.</i> <b>How to find a stationary distribution.</b> Talk given at a <a href="https://mat.ub.edu/departament/recerca/annual-departamental-workshop/" target="_blank">workshop</a> at the Facultat de Matemàtiques i Informàtica.</li>
-			<p>I explained the motivation behind the two papers with Ben Smith. <a href="assets/CS-meets-mathematics.pdf">You can see the slides here (pdf)</a>.</p>
+			<li><i>September 2022.</i> <b>How to find a stationary distribution.</b> Talk given at a <a href="https://mat.ub.edu/departament/recerca/annual-departamental-workshop/" target="_blank">workshop</a> at the Facultat de Matemàtiques i Informàtica, where I explained the motivation behind the two papers with Ben Smith. <a href="assets/CS-meets-mathematics.pdf">You can see the slides here (pdf)</a>.</li>
 
 			<li><i>June 2022.</i> <b>Abelian varieties of GL(4) type.</b> Talk given at the <a href="https://www.unirioja.es/dptos/dmc/jtn2022/index.html">Novenas Jornadas de Teoría de Números</a>.</li>
 
