--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 		<h2>Publications</h2>
 
 		<ul id="publications">
-			<li><b>Dieulefait, L.; Florit, E.; Vila, N. Seven Small Simple Groups Not Previously Known to Be Galois Over Q.</b>  Mathematics 2022, 10, 2048. [<a href="https://doi.org/10.3390/math10122048" target="_blank">journal</a>, <a href="/assets/papers/Dieulefait--Florit--Vila.pdf" target="_blank">pdf</a>]</li>
+			<li>Dieulefait, L.; Florit, E.; Vila, N. <b>Seven Small Simple Groups Not Previously Known to Be Galois Over Q.</b>  Mathematics 2022, 10, 2048. [<a href="https://doi.org/10.3390/math10122048" target="_blank">journal</a>, <a href="/assets/papers/Dieulefait--Florit--Vila.pdf" target="_blank">pdf</a>]</li>
 
-			<li><b>Florit, E.; Smith, B. An atlas of the Richelot isogeny graph</b> (Theory and Applications of Supersingular Curves and Supersingular Abelian Varieties). RIMS Kôkyûroku Bessatsu 2022, B90: 195-219. [<a href="http://hdl.handle.net/2433/276282" target="_blank">proceedings</a>, <a href="https://arxiv.org/abs/2101.00917" target="_blank">arXiv</a>]</li>
+			<li>Florit, E.; Smith, B. <b>An atlas of the Richelot isogeny graph</b> (Theory and Applications of Supersingular Curves and Supersingular Abelian Varieties). RIMS Kôkyûroku Bessatsu 2022, B90: 195-219. [<a href="http://hdl.handle.net/2433/276282" target="_blank">proceedings</a>, <a href="https://arxiv.org/abs/2101.00917" target="_blank">arXiv</a>]</li>
 
-			<li><b>Florit, E.; Smith, B. Automorphisms and Isogeny Graphs of Abelian Varieties, with Applications to the Superspecial Richelot Isogeny Graph.</b> In Arithmetic, Geometry, Cryptography, and Coding Theory 2021, 779:103-32. Contemp. Math. Amer. Math. Soc., 2022. [<a href="https://doi.org/10.1090/conm/779/15672" target="_blank">proceedings</a>, <a href="https://arxiv.org/abs/2101.00919" target="_blank">arXiv</a>]</li>
+			<li>Florit, E.; Smith, B. <b>Automorphisms and Isogeny Graphs of Abelian Varieties, with Applications to the Superspecial Richelot Isogeny Graph.</b> In Arithmetic, Geometry, Cryptography, and Coding Theory 2021, 779:103-32. Contemp. Math. Amer. Math. Soc., 2022. [<a href="https://doi.org/10.1090/conm/779/15672" target="_blank">proceedings</a>, <a href="https://arxiv.org/abs/2101.00919" target="_blank">arXiv</a>]</li>
 
 		</ul>
 
