Change link wording

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
 		<p>My email address is: enricflorit at ub dot edu.</p>
-		<p>A short list of places to go from here:</p>
+		<p>Some links:</p>
 		<ul class="left">
 			<li>The <a href="http://www.ub.edu/simba/">SIMBa Seminar</a>: informal mathematics seminar in Barcelona</li>
-			<li>My giving-back-to-the-community, have-fun-with-some-friends project: <a href="https://hackinglliure.org">Hacking Lliure</a></li>
 			<li>My <a href="https://github.com/3nr1c">github</a> and <a href="https://gitlab.com/efz1005/">gitlab</a> accounts</li>
 		</ul>
 		<div class="center">
