--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<ul id="publications">
 			<li>Fité, F.; Florit, E.; Guitart, X. <b>Endomorphism algebras of geometrically split genus 2 Jacobians over Q.</b> Preprint [<a href="https://arxiv.org/abs/2212.11102" target="_blank">arXiv</a>]</li>
 
-			<li>Dieulefait, L.; Florit, E.; Vila, N. <b>Seven Small Simple Groups Not Previously Known to Be Galois Over Q.</b>  Mathematics 2022, 10, 2048. [<a href="https://doi.org/10.3390/math10122048" target="_blank">journal</a>, <a href="/assets/papers/Dieulefait--Florit--Vila.pdf" target="_blank">pdf</a>]</li>
+			<li>Dieulefait, L.; Florit, E.; Vila, N. <b>Seven Small Simple Groups Not Previously Known to Be Galois Over Q.</b>  [<a href="/assets/papers/Dieulefait--Florit--Vila.pdf" target="_blank">pdf</a>]</li>
 
 			<li>Florit, E.; Smith, B. <b>An atlas of the Richelot isogeny graph</b> (Theory and Applications of Supersingular Curves and Supersingular Abelian Varieties). RIMS Kôkyûroku Bessatsu 2022, B90: 195-219. [<a href="http://hdl.handle.net/2433/276282" target="_blank">proceedings</a>, <a href="https://arxiv.org/abs/2101.00917" target="_blank">arXiv</a>]</li>
 
